--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
 	"license": "Apache-2.0",
 	"devDependencies": {
 		"@types/node": "^16.3.1",
-		"@types/ws": "^7.4.6",
 		"@typescript-eslint/eslint-plugin": "^4.27.0",
 		"@typescript-eslint/parser": "^4.27.0",
-		"dotenv": "^10.0.0",
 		"eslint": "^7.30.0",
 		"prettier": "^2.3.2",
 		"ts-node": "^10.1.0",
@@ -31,6 +29,7 @@
 	},
 	"dependencies": {
 		"chalk": "^4.1.1",
-		"discord.js": "^12.5.3"
+		"discord.js": "^12.5.3",
+		"dotenv": "^10.0.0"
 	}
 }
